# wwmaa

./: .codecov.yml  .coverage  .dockerignore  .flake8  .gitignore  .gitignore.e2e  .npmrc  .pre-commit-config.yaml  .railwayignore  ADMIN_DASHBOARD_INTEGRATION_COMPLETE.md  ADMIN_MEMBERS_API_ARCHITECTURE.md  ADMIN_MEMBERS_QUICK_REFERENCE.md  ADMIN_ROUTING_FIX.md  ADMIN_SETTINGS_API_REFERENCE.md  ADMIN_SETTINGS_IMPLEMENTATION_SUMMARY.md  API_ME_ENDPOINT_IMPLEMENTATION.md  ARCHITECTURE-CLARIFICATION.md  BACKEND_CREDENTIALS_NEEDED.md  BACKEND_PRODUCTION_READY.md  BACKEND_PRODUCTION_VERIFIED.md  BACKLOG-UPDATE-SUMMARY.md  BACKLOG.md  BLOG-SYNC-QUICKSTART.md  BLOG_API_IMPLEMENTATION.md  BOARD_APPROVAL_TEST_RESULTS.md  CERTIFICATIONS_API_IMPLEMENTATION.md  CERTIFICATIONS_QUICK_REFERENCE.md  CLIENT_CREDENTIALS_CHECKLIST.md  COMPREHENSIVE_QA_REPORT_NOV14.md  COPY_PASTE_VALUES.txt  CORS_FIX_VERIFIED.md  CRITICAL_ISSUES_FOR_BACKEND_ARCHITECT.md  DEPLOYMENT_STATUS.md  DOCKER-LOCAL-TESTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.strapi  E2E_FIX_SUMMARY.md  E2E_LOGIN_FIX_REPORT.md  (+165 more)
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
backend/: .coveragerc  .env.example  .gitignore  AI_REGISTRY_IMPLEMENTATION_SUMMARY.md  ATTENDEE_MANAGEMENT_IMPLEMENTATION.md  DUNNING_IMPLEMENTATION_SUMMARY.md  INDEXING_QUICK_START.md  SEARCH_FEEDBACK_IMPLEMENTATION_SUMMARY.md  STRIPE_IMPLEMENTATION_SUMMARY.md  TESTING_SETUP_SUMMARY.md  US-044-IMPLEMENTATION-SUMMARY.md  US-067-IMPLEMENTATION-SUMMARY.md  US-069-IMPLEMENTATION-SUMMARY.md  app.py  app.py.bak  config.py  coverage.json  pytest.ini  requirements.txt  run_tests.sh
cms/: .env.example  .gitignore  QUICK_START.md  README.md  generate-keys.sh  package-lock.json  package.json
components/: ResourceCard.tsx  footer.tsx  hero.tsx  nav.tsx  newsletter-signup.tsx  protected-route.tsx  role-badge.tsx  rsvp-button.tsx  user-menu.tsx
docs/: API_KEYS_AND_INTEGRATION_SETUP.md  DNS_CHECKLIST.md  DOMAIN_DEPLOYMENT_GUIDE.md  DOMAIN_QUICK_REFERENCE.md  DOMAIN_SETUP.md  DOMAIN_SETUP_SUMMARY.md  ENV_UPDATES_FOR_DOMAIN.md  LIVE-SESSION-USAGE-GUIDE.md  STRAPI_CMS_SETUP.md  US-034-GITHUB-ISSUE-UPDATE.md  US-034-IMPLEMENTATION-SUMMARY.md  US-035-IMPLEMENTATION-SUMMARY.md  US-039-IMPLEMENTATION-SUMMARY.md  US-046-IMPLEMENTATION-SUMMARY.md  US-048-VOD-PLAYER-IMPLEMENTATION.md  US-049-IMPLEMENTATION-SUMMARY.md  US-050-API-REFERENCE.md  US-057-IMPLEMENTATION-SUMMARY.md  US-059-IMPLEMENTATION-SUMMARY.md  US-065-IMPLEMENTATION-SUMMARY.md  US-066-IMPLEMENTATION-SUMMARY.md  US-068-IMPLEMENTATION-SUMMARY.md  US-070-IMPLEMENTATION-SUMMARY.md  VOD-PLAYER-DEVELOPER-GUIDE.md  ZERODB_PROJECT_API_IMPLEMENTATION.md  accessibility-checklist.md  accessibility-testing.md  backup-recovery.md  beehiiv-setup.md  blog-sync-beehiiv.md  cloudflare-calls-setup.md  cloudflare-stream-setup.md  environments.md  member-newsletter-sync.md  newsletter-integration.md  stripe-testing.md  zerodb-schema.md  zerodb-vector-schema.md
e2e/: README.md  admin.spec.ts  auth.spec.ts  events.spec.ts  example.spec.ts  (+2 more)
(+493 files in other folders)
