[tool.black]
# Black - The Uncompromising Code Formatter
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | env
  | \.env
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
  | \.tox
  | node_modules
  | \.next
  | migrations
)/
'''

[tool.isort]
# isort - Import Sorting
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/venv/*", "**/__pycache__/*", "**/node_modules/*", "**/.next/*"]
known_first_party = ["backend"]
known_third_party = [
    "fastapi",
    "pydantic",
    "redis",
    "stripe",
    "openai",
    "pytest",
    "httpx",
    "jose",
    "passlib",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
force_sort_within_sections = true
length_sort = false
sort_relative_imports = true

[tool.pytest.ini_options]
# Pytest configuration (alternative to pytest.ini)
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
# Coverage.py configuration
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
# Coverage reporting
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "WWMAA Backend Coverage Report"

[tool.mypy]
# MyPy type checking configuration
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wwmaa-backend"
version = "1.0.0"
description = "WWMAA Backend API - FastAPI application for managing membership, events, and content"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WWMAA Development Team"}
]
keywords = ["fastapi", "api", "membership", "events", "content-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]
